<resources>
    <string name="app_name">MyNotes</string>
    <string name="miscellaneous">Add-Ons.. (click here)</string>
    <string name="pick_color">Pick Color</string>
    <string name="add_image">Add Image</string>
    <string name="add_url">Add Url</string>
    
    <string name="enter_url">Enter Url</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="delete_note">Delete Note</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete</string>
</resources>